--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "db": "^6.0.3",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongo": "^0.1.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.1"
   }
 }
