--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongo": "^0.1.0",
+    "mongobd": "^0.0.1-security.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2"
   }
