--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongo": "^0.1.0",
     "mongobd": "^0.0.1-security.0",
     "mongodb": "^6.15.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2"
   }
 }
